plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'examen.dev'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // SPRING BOOT
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework:spring-core:6.2.5'

    // STRIPE
    implementation 'com.stripe:stripe-java:24.0.0'


    // DATABASE
    implementation 'org.postgresql:postgresql:42.6.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'com.auth0:java-jwt:4.4.0'

    // SPRING SECURITY
    implementation 'org.springframework.security:spring-security-crypto:5.8.0'

    // SWAGGER / SPRINGDOC OPENAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

    // LOMBOK
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    // TESTING
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'com.h2database:h2'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // PDF
    implementation 'com.github.librepdf:openpdf:1.3.30'
    implementation 'com.itextpdf:itextpdf:5.5.13.3'

}

// CONFIGURACIÓN DE TESTS Y JACOCO
tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

// CONFIGURACIÓN DE JACOCO
jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}
